Added AbcDataService call Server side streaming

--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.alok.grpc.GrpcServer</mainClass>
+                            <mainClass>com.alok.grpc.GrpcClient</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
